assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}
html {
	scroll-behavior: smooth;
}
body {
	max-width: 991px;
	font-family: 'Muli', sans-serif;
	height: 100vh;
	width: 100vw;
	overflow: auto;
	margin: 0;
	overflow-y: auto;
	overflow-x: hidden;
}
header {
	background-color: #ebbd28;
	position: fixed;
	top: 0;
	display: flex;
	padding: 0 max(5vw, calc(5vw + (90vw - 991px) / 2));
	width: 100%;
	margin: 0 auto;
	justify-content: space-between;
	align-items: center;
	height: 120px;
	z-index: 10;
}
:root {
	--hero-height: 60vh;
	--portfolio-height: 60vh;
}
.hero {
	height: var(--hero-height);
	width: 100vw;
	z-index: -1;
	position: relative;
	background-color: blue;
}
.hero-img {
	object-fit: cover;
	width: 100vw;
	height: var(--hero-height);
}
.hero-content {
	width: 200px;
	height: 200px;
	background-color: rgba(0, 0, 0, 0.7);
	padding: 25px;
	position: absolute;
	top: calc((var(--hero-height) - 200px) / 2);
	left: calc((100vw - 200px) / 2);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-evenly;
	text-align: center;
}
h1 {
	flex: 1;
	font-size: 20px;
	color: white;
	font-weight: 400;
	margin: 10px auto;
}
h3 {
	flex: 1;
	color: rgb(200, 200, 200, 1);
	font-weight: 400;
	margin: 10px auto;
}
main {
	background-color: rgb(120, 146, 120);
	position: absolute;
	top: 120px;
	margin-bottom: 50px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: stretch;
	z-index: 0;
}
footer {
	height: 50px;
	background: #ebbd28;
	color: black;
	text-align: center;
	padding: 5px;
	position: fixed;
	bottom: 0;
	display: flex;
	align-items: center;
	width: 100vw;
	justify-content: center;
}
footer p {
	padding: 0;
	margin: 0 auto;
	line-height: 1;
}
li {
	display: inline;
	padding: 6px;
}
a {
	text-decoration: none;
	color: black;
}
a:active,
a:hover,
a:visited,
a:active {
	text-decoration: none;
	text-decoration-color: none;
}
.portfolios-header {
	flex: 1;
	position: relative;
	color: #e0e0e0;
	font-size: 24px;
	text-align: center;
	margin: 30px 0;
	margin-top: 120px;
	border-bottom: 1px solid white;
	padding: 10px;
	width: 100vw;
}
.portfolios {
	width: 90vw;
	margin: 0 auto;
	margin-bottom: 100px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: center;
	justify-content: space-evenly;
}
.portfolio {
	width: 28vw;
	border: 1px solid darkgray;
	border-radius: 3px;
	margin: 20px 0;
	padding: 5px;
	border-radius: 10px;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-items: stretch;
	background-color: #977e7e;
}
.portfolio-header {
	flex: 1;
	position: relative;
	margin-top: -20px;
	border: 1px solid gray;
	border-radius: 8px;
	transition: all 0.5s ease-in;
	padding: 3px 5px;
	background-color: #977e7e;
	color: white;
	font-size: 20px;
}
.portfolio .portfolio-header {
	border-radius: 8px;
	transition: all 0.5s ease-in-out;
}
.portfolio:hover {
	box-shadow: inset 0px 0px 2px rgb(255, 255, 255), 0 0 10px rgba(255, 255, 255, 1);
}
.portfolio:hover {
	cursor: pointer;
}
.portfolio-text {
	flex: 1;
	color: #e0e0e0;
	font-size: 12px;
	text-align: center;
	margin: 10px 0;
}
.portfolio-image {
	flex: 5;
	padding: 4px;
	border-radius: 8px;
	object-fit: cover;
	width: 100%;
	height: 100%;
}
.portfolios-footer {
	flex: 1;
	position: relative;
	color: #e0e0e0;
	font-size: 24px;
	text-align: center;
	margin: 30px 0;
	margin-bottom: 100px;
	border-bottom: 1px solid white;
	padding: 10px;
	width: 100vw;
}
.bg-modal {
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	position: fixed;
	top: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	display: none;
}
.modal-content {
	width: 500px;
	height: 300px;
	background-color: white;
	opacity: 1;
	border-radius: 4px;
	text-align: center;
	padding: 20px;
	position: relative;
}
img {
	width: 100px;
}
.close {
	position: absolute;
	top: 0;
	right: 14px;
	font-size: 42px;
	transform: rotate(45deg);
	cursor: pointer;
}
input {
	width: 50%;
	display: block;
	margin: 15px auto;
}
.btn {
	width: 100px;
	height: 20px;
	padding: 14px 40px;
	background-color: rgb(38, 99, 156);
	border-radius: 10rem;
	color: white;
	cursor: pointer;
}
.btn:hover {
	transform: scale(0.98);
}
.btn:focus {
	outline: 0;
}
@media screen and (max-width: 991px) {
	section.portfolios {
		width: 90vw;
	}
	a.portfolio {
		width: 40vw;
	}
}
@media screen and (max-width: 768px) {
	section.portfolios {
		width: 90vw;
	}
	a.portfolio {
		width: 80vw;
	}
}

